<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wifi on Call</string>

    <string name="PrefCategory_ToggleWifi">Wifi Auto Switching</string>
	    <string name="PrefTitle_ToggleWifiWhilePhoneOffHook">While Calling</string>
	    <string name="PrefDesc_ToggleWifiWhilePhoneOffHook">Turn on Wifi while on a call.</string>
	    
	    <string name="PrefTitle_ToggleWifiWhileCharging">While Charging</string>
	    <string name="PrefDesc_ToggleWifiWhileCharging">Turn on Wifi while the phone is charging.</string>
<!-- 
    <string name="PrefCategory_SuggestWifi">Display Wifi Notification when&#8230;</string>
	    <string name="PrefTitle_SuggestWifiOnDisconnect">Disconnected</string>
	    <string name="PrefDesc_SuggestWifiOnDisconnect">Display notification to turn Wifi on when there is no network.</string>
	
	<string name="notify_suggestwifi_title">No Connection Available</string>
    <string name="notify_suggestwifi_description">Click here to turn on Wifi.</string>
    <string name="notify_suggestwifi_tickertext">No internet connection available. Try using Wifi.</string>
    
-->
	    
    <string name="PrefCategory_AboutApp">About Application</string>
	    <string name="PrefTitle_AboutApp">@string/app_name</string>
	    <string name="PrefDesc_AboutApp">Version: 2.0</string>
    
</resources>
